--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	 height: 200px;
 	 width: 200px;
 	 background-color: azure;
+	 transition: .2s;
  }
 
 
@@ -21,7 +22,7 @@
 
 </head>
 	<body>
-		<h2>Muévete con las teclas W A S D</h2>
+		<h2 style="text-align: center">Muévete con las teclas W A S D</h2>
 		<table border="1px" style="margin: auto">
 			<tr>
 			  <td></td>
