--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	 height: 200px;
 	 width: 200px;
 	 background-color: azure;
+	 border: black 1px dotted;
 	 transition: .2s;
+	 border-radius: 30px;
  }
 
 
@@ -23,7 +25,7 @@
 </head>
 	<body>
 		<h2 style="text-align: center">Muévete con las teclas W A S D</h2>
-		<table border="1px" style="margin: auto">
+		<table  style="margin: auto">
 			<tr>
 			  <td></td>
 			  <td></td>
@@ -48,8 +50,8 @@ var este;
 function fondo (){
 			$("td").css("background-color", "azure");
 			$("td").css("border", "black 1px dotted");
-			$coleccion[este].style.backgroundColor = "crimson";
-			$coleccion[este].style.border = "2px gold solid";
+			$coleccion[este].style.backgroundColor = "azure";
+			$coleccion[este].style.border = "20px gold double";
 }
 
 var $coleccion = $("td");
@@ -57,8 +59,8 @@ var $coleccion = $("td");
  $coleccion.on( "click", function(e){
 	$("td").css("background-color", "azure");
 	$("td").css("border", "black 1px dotted");
-	$(this).css("background-color", "crimson");
-	$(this).css("border", "gold 2px dotted");
+	$(this).css("background-color", "azure");
+	$(this).css("border", "gold 20px double");
 	
 	este = $coleccion.index(this);
 
